* checkdir -- ultraverbose mode (-v -v -v -v) to print nicely formatted list of scans
* remove auto-starting of the Mark5A program
* Fix compiler warnings and move to safer string manipulation
* rename .c to .cpp to reflect the fact that g++ is needed
* close popen with pclose (suggested by Martin Ettl)
* complain if /tmp or correlation destination directory are running low on space

Version 1.2
~~~~~~~~~~~
* mk5dir -- add suffix to distinguish otherwise identically named scans
* Clean up permissions and ownership issues when spawning jobs
* Improve bankswitching
* Version for DiFX-1.5.2

Version 1.1
~~~~~~~~~~~
* XLRClose / XLROpen after XLRSelectBank to prevent read errors
* add checkdir
* Version for DiFX-1.5.1

Version 1.0
~~~~~~~~~~~
* Version for DiFX-1.5

Version 0.9
~~~~~~~~~~~
* go back to using ssh to start new processes -- ensures up-to-date enviromnent
* ignore child signal to prevent defunct processes
* use password file to get proper user ids
* spawn difxlog when starting a job
* fix dual-link network performance tracking
* option to start condition_watch upon startup

Version 0.8
~~~~~~~~~~~
* Post NRAO-DiFX 1.1 branch
* don't use tstMark5A anymore
* lots of careless bug fixes
* reenable auto getvsn
* Support for copy in mk5daemon, and support for HUP signal in mk5cp and mk5dir
* support difxStart messages
* mk5cp by exp code
* alert messages for mk5cp and mk5dir
* minor bug fixes for mk5cp and mk5dir
* send messages whenever modules are inserted or removed
* always make sure VSNs are legal
* use su, not ssh
* mk5dir and mk5cp now report on replaced data
* track StreamStor versions

Version 0.7
~~~~~~~~~~~
* separate out proc.[ch]
* function to look for windrvr use
* periodically report VSNs
* This version is for NRAO-DiFX 1.1

Version 0.6
~~~~~~~~~~~
* fix stopmark5a hang -- mutex not unlocked
* fix die on quit -- unused %s

Version 0.5
~~~~~~~~~~~
* add mk5dir

Version 0.4
~~~~~~~~~~~
* more and improved logging
* usage

Version 0.3
~~~~~~~~~~~